--- a/client_website/public/styles/main.css
+++ b/client_website/public/styles/main.css
@@ -66,6 +66,19 @@ body {
     paint-order: stroke fill;
     font-size: clamp(1rem, 5vw, 2.5rem);
     font-weight: bold;
+    padding-bottom: 2vh;
+}
+
+.popupError {
+    color: red;
+    -webkit-text-stroke: var(--dark-color) 1vh;
+    paint-order: stroke fill;
+    font-size: clamp(1rem, 5vw, 2.5rem);
+    font-weight: bold;
+    padding-bottom: 2vh;
+    opacity: 1;
+    -webkit-transition: opacity 1000ms linear;
+    transition: opacity 1000ms linear;
 }
 
 .entryGroup {
@@ -90,6 +103,13 @@ input {
     width: clamp(8rem, 30vw, 16rem);
     font-weight: bold;
     text-align: center;
+}
+
+input::placeholder {
+    color: var(--med-color);
+    -webkit-text-stroke: var(--dark-color) 0px;
+    font-size: 2vh;
+    opacity: 0.5;
 }
 
 button {
