--- a/client_website/public/styles/main.css
+++ b/client_website/public/styles/main.css
@@ -54,6 +54,7 @@ body {
 .popupHeader {
     color: var(--font-color);
     -webkit-text-stroke: var(--dark-color) 1vh;
+    stroke-linejoin: round;
     paint-order: stroke fill;
     font-size: clamp(2rem, 10vw, 5rem);
     font-weight: bold;
@@ -63,6 +64,7 @@ body {
 .popupSubheader {
     color: var(--highlight-color);
     -webkit-text-stroke: var(--dark-color) 1vh;
+    stroke-linejoin: round;
     paint-order: stroke fill;
     font-size: clamp(1rem, 5vw, 2.5rem);
     font-weight: bold;
@@ -72,6 +74,7 @@ body {
 .popupError {
     color: red;
     -webkit-text-stroke: var(--dark-color) 1vh;
+    stroke-linejoin: round;
     paint-order: stroke fill;
     font-size: clamp(1rem, 5vw, 2.5rem);
     font-weight: bold;
@@ -98,6 +101,7 @@ input {
     padding: 1vh 1vw;
     color: var(--font-color);
     -webkit-text-stroke: var(--dark-color) 1vh;
+    stroke-linejoin: round;
     paint-order: stroke fill;
     font-size: 5vh;
     width: clamp(8rem, 30vw, 16rem);
@@ -108,6 +112,7 @@ input {
 input::placeholder {
     color: var(--med-color);
     -webkit-text-stroke: var(--dark-color) 0px;
+    stroke-linejoin: round;
     font-size: 2vh;
     opacity: 0.5;
 }
