--- a/client_website/public/styles/main.css
+++ b/client_website/public/styles/main.css
@@ -19,6 +19,8 @@ body {
     background-repeat: repeat-y, no-repeat;
     background-size: 30vw, cover;
     border-radius: 15px;
+    min-width: 60vw;
+    min-height: 60vh;
     padding: 5vh 5vw;
     margin: 0;
     position: absolute;
@@ -38,6 +40,8 @@ body {
     background-repeat: repeat-y, no-repeat;
     background-size: 30vw, cover;
     border-radius: 15px;
+    min-width: 60vw;
+    min-height: 60vh;
     padding: 5vh 5vw;
     margin: 0;
     position: absolute;
