--- a/client_website/public/styles/main.css
+++ b/client_website/public/styles/main.css
@@ -105,7 +105,7 @@ body {
     height: fit-content;
 }
 
-input {
+.textInput {
     background-color: var(--light-color);
     border: solid var(--med-color) 1vh;
     filter: drop-shadow(var(--dark-color) 0px 0px 10px);
@@ -122,7 +122,7 @@ input {
     text-align: center;
 }
 
-input::placeholder {
+.textInput::placeholder {
     color: var(--med-color);
     -webkit-text-stroke: var(--dark-color) 0px;
     stroke-linejoin: round;
@@ -156,14 +156,98 @@ button img {
     height: 30vh;
 }
 
-#paintArea {
-    background-color: var(--light-color);
+.paintArea {
+    background-color: var(--med-color);
     margin: 1vw;
     border-radius: 15px;
     border: solid var(--dark-color) 1vh;
     flex: 1 0 30vw;
-    aspect-ratio: 5 / 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1vw;
 }
+
+canvas {
+    background-color: var(--light-color);
+    margin-bottom: 1vw;
+    border-radius: 15px;
+    border: solid var(--dark-color) 1vh;
+    flex: 1 0 25vw;
+    aspect-ratio: 1 / 1;
+}
+
+.clr{
+    height: 30px;
+    width: 30px;
+    background-color: var(--light-color);
+    border-radius: 50%;
+    border: 1vh solid var(--dark-color);
+    transition: transform .25s;
+}
+.clr:hover{
+    transform: scale(1.2);
+}
+.clr:nth-child(1){
+    background-color: #000000;
+}
+.clr:nth-child(2){
+    background-color: #FF0000;
+}
+.clr:nth-child(3){
+    background-color: #FF8800;
+}
+.clr:nth-child(4){
+    background-color: #FFFF00;
+}
+.clr:nth-child(5){
+    background-color: #00FF00;
+}
+.clr:nth-child(6){
+    background-color: #0000FF;
+}
+.clr:nth-child(7){
+    background-color: #8800FF;
+}
+.clr:nth-child(8){
+    background-color: #FFFFFF;
+}
+.clr:nth-child(9){
+    background-color: #E6C25D;
+}
+
+.rangeSlider {
+    -webkit-appearance: none;
+    margin: 1vh;
+    width: 80%;
+    height: 15px;
+    border-radius: 5px;  
+    background: var(--light-color);
+    outline: none;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+  
+  .rangeSlider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%; 
+    background: var(--med-color);
+    border: 1vh solid var(--dark-color);
+    cursor: pointer;
+  }
+  
+  .rangeSlider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: var(--med-color);
+    border: 1vh solid var(--dark-color);
+    cursor: pointer;
+  }
 
 @media screen and (max-width:990px) {
     .LHpopup {
@@ -179,7 +263,7 @@ button img {
         justify-content: space-evenly;
         flex-grow: 1;
     }
-    #paintArea {
+    .paintArea {
         margin: 0;
     }
 }
